--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.2.5",
         "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^0.7.3",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
-        "vite": "^4.0.0",
+        "vite": "^4.0.4",
         "vue-loader": "^17.0.1"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
         "bootstrap-vue": "^2.23.1",
         "laravel-echo": "^1.15.0",
+        "node": "^18.13.0",
         "pusher-js": "^8.0.1",
+        "rollup": "^3.12.1",
         "vue": "^3.2.36",
         "vue-axios": "^3.5.2",
         "vue-router": "^4.1.6"
